--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ sudo: required
 before_install: sudo pip install foo
 install: true
 before_script: true
-//script: true
+# script: true
 script: mytest.py
-aftersuccess 
-//or afterfailure
+aftersuccess
+# or afterfailure
 before_deploy: true
 deploy: true
 after_deploy: true
