--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: python
-sudo: required
-before_install: sudo pip install foo
-install: true
-before_script: true
+# sudo: required
+# before_install: sudo pip install foo
+# install: true
+# before_script: true
 # script: true
 script: mytest.py
-aftersuccess
+# aftersuccess
 # or afterfailure
-before_deploy: true
-deploy: true
-after_deploy: true
-after_script: true
+# before_deploy: true
+# deploy: true
+# after_deploy: true
+# after_script: true
