--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: python
 # install: true
 # before_script: true
 # script: true
-script: mytest.py
+script: python mytest.py
 # aftersuccess
 # or afterfailure
 # before_deploy: true
